<resources>
    <string name="app_name">patient</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="e_mail">E-mail</string>
    <string name="password">password</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="logour">Logour</string>
    <string name="logout">Log Out</string>
    <string name="paaword">Paaword</string>
    <string name="title">Title</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="province">Province</string>
    <string name="distric">District</string>
    <string name="dob">DOB</string>
    <string name="gender">Gender</string>
    <string name="maritial_status">Maritial Status</string>
    <string name="mobile_no">Mobile No</string>
    <string name="phone_no">Phone No</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="ummarry">Ummarry</string>
    <string name="marry">marry</string>
    <string name="type_text_here">Type text here</string>
    <string name="appointments">Appointments</string>
    <string name="messages">Messages</string>
    <string name="medical_records">Medical Records</string>
    <string name="chose_a_image">Chose a Image</string>
    <string name="upload_image">Upload Image</string>
    <string name="skip"><![CDATA[Skip>>]]></string>
    <string name="todo">TODO</string>
    <string name="chanel_your_doctor">Chanel Your Doctor</string>
    <string name="speciality">Speciality</string>
    <string name="doctor">Doctor</string>
    <string name="or">OR</string>
    <string name="search">Search</string>
    <string name="_07th_of_sunday_january_2018_at_9_00am">07th of Sunday January 2018 at 9.00am</string>
    <string name="next_avealable_number_is_04">Next available number is 04</string>
    <string name="book_now">Book Now</string>
    <string name="appointment_details">Appointment Details</string>
    <string name="appointment_date">Appointment Date :</string>
    <string name="appointment_no">Appointment No     :</string>
    <string name="confirm">Confirm</string>
    <string name="conform">Conform</string>
    <string-array name="title">
        <item>Mr.</item>
        <item>Mrs.</item>
        <item>Ms.</item>
    </string-array>
    <string-array name="province">
        <item>Northern</item>
        <item>North Western</item>
        <item>Western</item>
        <item>North Central</item>
        <item>Central</item>
        <item>Sabaragamuwa</item>
        <item>Eastern</item>
        <item>Uva</item>
        <item>Southern</item>

    </string-array>
    <string-array name="districs">
        <item>Mr.</item>
        <item>Mrs.</item>
        <item>Ms.</item>
    </string-array>
    <string name="title_activity_location">Map</string>

</resources>
