<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.project.kalpawijesooriya.patient.Login">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="204dp"
        android:layout_marginBottom="-15dp"
        android:src="@drawable/doctor" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#41097e35">

    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
            android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/title"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/first_name"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/last_name"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/address"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/province"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/distric"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/dob"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="21dp"
                    android:text="@string/gender"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="21dp"
                    android:text="@string/maritial_status"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/mobile_no"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/phone_no"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:text="@string/e_mail"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                     />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/paaword"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                   />

           </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="vertical"
        >

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/dropdown"
            android:entries="@array/title"
            android:popupBackground="@color/select">


        </android.support.v7.widget.AppCompatSpinner>

        <EditText
            android:id="@+id/fname"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/textbox"
            android:inputType="text"
            android:maxLines="1"
            android:layout_marginTop="20px"
            android:focusableInTouchMode="true"
            android:imeOptions="actionUnspecified"
            android:singleLine="true"
            android:textColor="@android:color/black" />
        <EditText
            android:id="@+id/lname"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/textbox"
            android:inputType="text"
            android:maxLines="1"
            android:layout_marginTop="20px"
            android:focusableInTouchMode="true"
            android:imeOptions="actionUnspecified"
            android:singleLine="true"
            android:textColor="@android:color/black" />
        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/textbox"
            android:inputType="text"
            android:maxLines="1"
            android:layout_marginTop="20px"
            android:focusableInTouchMode="true"
            android:imeOptions="actionUnspecified"
            android:singleLine="true"
            android:textColor="@android:color/black" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/province"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="20px"
            android:background="@drawable/dropdown"
            android:entries="@array/province"
            android:popupBackground="@color/select">


        </android.support.v7.widget.AppCompatSpinner>
        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/district"
            android:layout_marginTop="20px"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/dropdown"
            android:entries="@array/districs"
            android:popupBackground="@color/select">


        </android.support.v7.widget.AppCompatSpinner>
        <EditText
            android:id="@+id/Birthday"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/textbox"
            android:inputType="date"
            android:maxLines="1"
            android:clickable="true"
            android:editable="false"
            android:layout_marginTop="20px"
            android:focusableInTouchMode="true"
            android:imeOptions="actionUnspecified"
            android:singleLine="true"
            android:focusable="false"
            android:textColor="@android:color/black" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:id="@+id/gender"
            android:layout_marginTop="15px"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:checked="true"
                android:buttonTint="#0b5929"
                />

            <RadioButton
                android:id="@+id/radio_female"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:buttonTint="#0b5929"

                android:text="@string/female"
                />
        </RadioGroup>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_marginTop="15px"
            android:id="@+id/marry"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton android:id="@+id/radio_marry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/marry"
                android:checked="true"
                android:buttonTint="#0b5929"

                 />
            <RadioButton android:id="@+id/radio_unmarry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ummarry"
                android:buttonTint="#0b5929"
                 />
        </RadioGroup>

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/textbox"
            android:inputType="phone"
            android:maxLines="1"
            android:layout_marginTop="20px"
            android:focusableInTouchMode="true"
            android:imeOptions="actionUnspecified"
            android:singleLine="true"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/mobile"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/textbox"
            android:inputType="phone"
            android:maxLines="1"
            android:layout_marginTop="20px"
            android:focusableInTouchMode="true"
            android:imeOptions="actionUnspecified"
            android:singleLine="true"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/textbox"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_marginTop="20px"
            android:focusableInTouchMode="true"
            android:imeOptions="actionUnspecified"
            android:singleLine="true"
            android:textColor="@android:color/black" />

            <EditText
                android:layout_marginTop="18px"
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:background="@drawable/textbox"
                android:layout_height="30dp"
                android:focusableInTouchMode="true"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/background_dark" />
    </LinearLayout>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/sign_up_button"
            style="?android:textAppearanceSmall"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#095827"
            android:text="@string/action_sign_in_short"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="500px"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="16dp"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="#ffffff" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="500px"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/btn_link_to_login"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="16dp"
            android:layout_marginBottom="30dp"/>


    </LinearLayout>
    </LinearLayout>
    </ScrollView>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />


</android.support.design.widget.CoordinatorLayout>
