<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/con_rel"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="2dp"
    android:layout_marginBottom="3dp"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:background="#a2ffffff">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="3dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/day"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:layout_marginLeft="5dp"
            android:textColor="@color/colorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_07th_of_sunday_january_2018_at_9_00am"/>
        <TextView
            android:id="@+id/nextnumber"
            android:layout_marginLeft="5dp"
            android:textSize="18sp"
            android:textColor="@color/colornextnumber"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:text="@string/next_avealable_number_is_04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/booknow"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="240dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/colorbookNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_now"/>
    </LinearLayout>
</RelativeLayout>